# reinforcement-learning-lab

./: .gitignore  .gitmodules  pyproject.toml
actor_critic/: cartpole_experiments.py  lunar_experiment.py  raport.md  solution.py
bandits/: bandits.py  bandits_drifting.py  bandits_study.py  raport.md  requirements.txt
bandits/bandits/: __init__.py  bandits.py  egreedy.py  etc.py  gradient.py  random.py  thompson.py  top_hit.py  ucb1.py
decision_transformer/: .gitignore  collect_dataset.py  collect_datasets.py  dqn.yml  dt_optuna.py  eval_bcs.sh  eval_dts.sh  eval_experts.sh  evaluate_bc.py  evaluate_dt.py  evaluate_expert.py  pyproject.toml  raport.md  train_agent.py  train_bcs.sh  train_behaviour_cloning.py  train_dt.py  train_dts.sh  train_expert.sh
grpo/: raport.md  rewards.py  train.py
isolation/: isolation.py  plots.py  raport.md  tournament_results_7x5.csv
sac_her/: .gitignore  experiment_pick_and_place.sh  experiment_push.sh  experiment_reach.sh  plot.py  plot.sh  raport.md  train_pick.py  train_push.py  train_reach.py
sac_her/asdf/: algos.py  buffers.py  loggers.py
turns/: .gitignore  aggragate_turn_plots.py  parametric_study.py  parametric_study_plot.py  parametric_study_progress.py  raport.md  requirements.txt  solution.py  speeding.py  utils.py  visualize.py
turns/problem/: egreedy_n_sarsa.py  problem.py  random_driver.py
turns/problem_original/: __init__.py  egreedy_n_sarsa.py  problem.py  random_driver.py
