[project]
name = "rl-labs-dt"
version = "1.0.0"
description = ""
authors = [
    {name = "Łukasz Kwinta (lkwinta)", email = "lukaszmind@gmail.com"}
]
readme = "README.md"

requires-python = ">=3.12"

dependencies = [
    "stable-baselines3[extra]",
    "matplotlib",
    "gymnasium[box2d]",
    "rl_zoo3",
    "minari[all]",
    "nanodt",
    "optuna-dashboard",
]

[dependency-groups]
dev = [
    "pre-commit",
    "ruff"
]

[tool.ruff.lint]
ignore = [
    "E731",  # lambda expressions
]

[tool.uv.sources]
nanodt = { path = "nanoDT", editable = true }
